<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.s3529589.mad_a1.Model.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="0dp">



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addFriends"
            android:text="@string/addFriends"
            android:layout_weight="1"
            android:background="#931621"
            android:textColor="#eeeeee"
            android:textStyle="bold"
            android:textSize="22dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/removeFriends"
            android:text="@string/removeFriends"
            android:layout_below="@+id/addFriends"
            android:layout_weight="1"
            android:background="#28464B"
            android:textColor="#eeeeee"
            android:textStyle="bold"
            android:textSize="22dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editFriends"
            android:text="@string/editFriends"
            android:layout_below="@+id/removeFriends"
            android:layout_weight="1"
            android:background="#326771"
            android:textColor="#eeeeee"
            android:textStyle="bold"
            android:textSize="22dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/displayFriends"
            android:text="@string/displayFriends"
            android:layout_below="@+id/editFriends"
            android:layout_weight="1"
            android:background="#2C8C99"
            android:textColor="#eeeeee"
            android:textStyle="bold"
            android:textSize="22dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scheduleMeetings"
            android:text="@string/scheduleMeetings"
            android:layout_below="@+id/displayFriends"
            android:layout_weight="1"
            android:background="#F9B689"
            android:textColor="#eeeeee"
            android:textStyle="bold"
            android:textSize="22dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editMeetingDetails"
            android:text="@string/editMeetingDetails"
            android:layout_below="@+id/displayFriends"
            android:layout_weight="1"
            android:background="#42D9C8"
            android:textColor="#eeeeee"
            android:textStyle="bold"
            android:textSize="22dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/displayMeetings"
            android:text="@string/displayMeetings"
            android:layout_below="@+id/editMeetingDetails"
            android:layout_weight="1"
            android:textColor="#eeeeee"
            android:textStyle="bold"
            android:textSize="22dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selection"
            android:text="@string/selection"
            android:layout_below="@+id/displayMeetings"
            android:layout_weight="1"
            android:textColor="#eeeeee"
            android:textStyle="bold"
            android:textSize="22dp"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
